--- a/titleitf.dtx
+++ b/titleitf.dtx
@@ -158,7 +158,7 @@ Copyright and Licence
 %</driver>
 % \fi
 %
-% \CheckSum{504}
+% \CheckSum{661}
 % \GetFileId{titleitf.sty}
 %
 % \changes{v0}{2022/05/22}{初始版本。}
@@ -574,7 +574,7 @@ Copyright and Licence
     paragraph ,
     subparagraph
   }
-\hook_gput_code:nnn { package/titlesec/after } { titleitf }
+\hook_gput_code:nnn { package / titlesec / after } { titleitf }
   {
     \cs_if_exist_use:NT \ttl@keys
       { \cs_new_eq:NN \@@_ttlp_append:nn \ttlp@append }
@@ -673,6 +673,8 @@ Copyright and Licence
     titlemarks : commalist = ,
     headrule   : tokenlist = ,
     footrule   : tokenlist = ,
+    floathead  : commalist = ,
+    floatfoot  : commalist = ,
   }
 \DeclareTemplateCode { ttlitf } { page } { 1 }
   {
@@ -683,6 +685,8 @@ Copyright and Licence
     titlemarks = \l_@@_title_marks_clist ,
     headrule   = \l_@@_headrule_tl ,
     footrule   = \l_@@_footrule_tl ,
+    floathead  = \l_@@_float_head_clist ,
+    floatfoot  = \l_@@_float_foot_clist ,
   }
   {
     \AssignTemplateKeys
@@ -691,22 +695,58 @@ Copyright and Licence
         \exp_not:N \def \exp_not:N \ttl@headfmt
           { \exp_not:o { \l_@@_page_format_tl } }
       }
-    \exp_args:No \@@_add_offset:n { \l_@@_offset_clist }
-    \exp_args:No \@@_add_line:nn { \l_@@_head_clist } { head }
-    \exp_args:No \@@_add_line:nn { \l_@@_foot_clist } { foot }
+    \@@_set_title_marks:
+    \@@_add_rule:n { head }
+    \@@_add_rule:n { foot }
+    \@@_add_aux:Nn \@@_add_line:nn { head }
+    \@@_add_aux:Nn \@@_add_line:nn { foot }
+    \@@_add_aux:Nnn \@@_add_float_line:nn { float } { head }
+    \@@_add_aux:Nnn \@@_add_float_line:nn { float } { foot }
+    \@@_add_aux:NN \@@_add_offset:n \l_@@_offset_clist
+    \@@_set_page_style:no {#1} { \l_@@_style_tl }
+  }
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_add_aux:Nn,\@@_add_aux:Nn,\@@_add_aux:Nnn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_add_aux:NN #1#2
+  {
+    \clist_if_empty:NF #2
+      { \exp_args:No #1 {#2} }
+  }
+\cs_new_protected:Npn \@@_add_aux:Nn #1#2
+  {
+    \exp_args:NNc \@@_add_aux:NNn #1
+      { l_@@_ #2 _clist } {#2}
+  }
+\cs_new_protected:Npn \@@_add_aux:Nnn #1#2#3
+  {
+    \exp_args:NNc \@@_add_aux:NNn #1
+      { l_@@_ #2 _ #3 _clist } {#3}
+  }
+\cs_new_protected:Npn \@@_add_aux:NNn #1#2#3
+  {
+    \clist_if_empty:NF #2
+      { \exp_args:No #1 {#2} {#3} }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_set_title_marks:}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_set_title_marks:
+  {
     \clist_if_empty:NF \l_@@_title_marks_clist
       {
-        \tl_put_right:Nx \l_@@_style_tl
+        \exp_args:Ne \@@_add_style:n
           {
             \exp_not:N \ttl@setmarks@x
               { \exp_not:o { \l_@@_title_marks_clist } }
           }
       }
-    \@@_add_rule:n { head }
-    \@@_add_rule:n { foot }
-    \@@_set_page_style:no {#1} { \l_@@_style_tl }
   }
 %    \end{macrocode}
+% \end{macro}
 %
 % \begin{macro}{\@@_add_style:n}
 %    \begin{macrocode}
@@ -797,8 +837,8 @@ Copyright and Licence
   }
 \cs_new_protected:Npn \@@_set_outer:n #1
   {
-    \tl_set_eq:NN \l_@@_odd_right_tl {#1}
-    \tl_set_eq:NN \l_@@_even_left_tl {#1}
+    \tl_set:Nn \l_@@_odd_right_tl {#1}
+    \tl_set:Nn \l_@@_even_left_tl {#1}
   }
 %    \end{macrocode}
 %
@@ -808,29 +848,18 @@ Copyright and Licence
   {
     \group_begin:
       \keys_set:nn { ttlitf / LCR } {#1}
-    \exp_args:NNNe \group_end:
-    \tl_set:Nn \l_@@_line_tl
+    \exp_args:NNe \group_end:
+    \@@_add_style:n
       {
-        [ { \exp_not:o { \l_@@_even_left_tl } } ]
-        [ { \exp_not:o { \l_@@_even_center_tl } } ]
-        [ { \exp_not:o { \l_@@_even_right_tl } } ]
-        { \exp_not:o { \l_@@_odd_left_tl } }
-        { \exp_not:o { \l_@@_odd_center_tl } }
-        { \exp_not:o { \l_@@_odd_right_tl } }
-      }
-    \tl_if_eq:NNF \l_@@_line_tl \c_@@_empty_line_tl
-      {
-        \exp_args:Ne \@@_add_style:n
-          {
-            \exp_not:c { ttl@set #2 }
-            \exp_not:o { \l_@@_line_tl }
-          }
+        \exp_not:c { ttl@set #2 }
+          [ { \exp_not:o { \l_@@_even_left_tl } } ]
+          [ { \exp_not:o { \l_@@_even_center_tl } } ]
+          [ { \exp_not:o { \l_@@_even_right_tl } } ]
+          { \exp_not:o { \l_@@_odd_left_tl } }
+          { \exp_not:o { \l_@@_odd_center_tl } }
+          { \exp_not:o { \l_@@_odd_right_tl } }
       }
   }
-\exp_args_generate:n { NNe }
-\tl_new:N \l_@@_line_tl
-\tl_const:Nn \c_@@_empty_line_tl
-  { [ { } ] [ { } ] [ { } ] { } { } { } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -856,6 +885,152 @@ Copyright and Licence
       { 0pt }
       { \skip_eval:n {#1} }
   }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+\keys_define:nn { ttlitf / float }
+  {
+    extra   .tl_set:N = \l_@@_float_extra_tl ,
+    extra   .groups:n = { extra } ,
+    placement .code:n = \@@_set_float_placement:n {#1} ,
+    unknown   .code:n =
+      \exp_args:No \@@_set_float_unknown:nn { \l_keys_key_str } {#1}
+  }
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_set_float_placement:n}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_set_float_placement:n #1
+  {
+    \tl_set:Nx \l_@@_tmp_tl {#1}
+    \tl_remove_all:Nn \l_@@_tmp_tl { ~ }
+    \tl_if_empty:NTF \l_@@_tmp_tl
+      { \tl_clear:N \l_@@_float_placement_tl }
+      {
+        \exp_args:No \@@_set_float_placement_aux:nn
+          { \l_@@_tmp_tl } {#1}
+      }
+  }
+\cs_new_protected:Npn \@@_set_float_placement_aux:nn #1#2
+  {
+    \regex_match:NnTF \c_@@_float_placement_regex {#1}
+      { \tl_set:Nn \l_@@_float_placement_tl {#1} }
+      { \msg_warning:nnn { ttlitf } { unknown-placement } {#2} }
+  }
+\tl_new:N \l_@@_tmp_tl
+\tl_new:N \l_@@_float_placement_tl
+\bool_new:N \l_@@_float_placement_bool
+\regex_const:Nn \c_@@_float_placement_regex { \A [htbp]+ \Z }
+\msg_new:nnn { ttlitf } { unknown-placement }
+  { Unknown~float~placement~"#1"~is~ignored. }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_set_float_unknown:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_set_float_unknown:nn #1#2
+  {
+    \tl_clear:N \l_@@_float_placement_tl
+    \tl_set:Nx \l_@@_tmp_tl {#1}
+    \tl_remove_all:Nn \l_@@_tmp_tl { ~ }
+    \exp_args:No \@@_set_float_placement_aux:nn { \l_@@_tmp_tl } {#1}
+    \tl_if_empty:NF \l_@@_float_placement_tl
+      { \@@_add_float_line_spec:n {#2} }
+  }
+\cs_new_protected:Npn \@@_add_float_line_spec:n #1
+  {
+    \group_begin:
+      \keys_set_known:nnN { ttlitf / LCR } {#1} \l_@@_unknown_tl
+      \keys_set_groups:nno { title / float } { extra } { \l_@@_unknown_tl }
+    \exp_last_unbraced:Ne \group_end:
+      { \exp_args:No \@@_add_float_line_aux:n { \l_@@_head_foot_tl } }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_add_float_line:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_add_float_line:nn #1#2
+  {
+    \group_begin:
+      \keys_set_known:nnN { ttlitf / LCR } {#1} \l_@@_unknown_tl
+      \keys_set_known:noN { ttlitf / float }
+        { \l_@@_unknown_tl } \l_@@_unknown_tl
+    \exp_last_unbraced:Ne \group_end:
+      {
+        \tl_if_empty:NTF \l_@@_unknown_tl
+          { \@@_add_float_line_aux:n {#2} }
+          {
+            \tl_if_empty:NF \l_@@_float_placement_tl
+              { \@@_add_float_line_aux:n {#2} }
+            \@@_add_float_unknown:nn
+              { \exp_not:o { \l_@@_unknown_tl } }
+              {#2}
+          }
+      }
+  }
+\cs_new:Npn \@@_add_float_line_aux:n #1
+  {
+    \@@_add_float_line:nnnn
+      {#1}
+      {
+        [ { \exp_not:o { \l_@@_even_left_tl } } ]
+        [ { \exp_not:o { \l_@@_even_center_tl } } ]
+        [ { \exp_not:o { \l_@@_even_right_tl } } ]
+        { \exp_not:o { \l_@@_odd_left_tl } }
+        { \exp_not:o { \l_@@_odd_center_tl } }
+        { \exp_not:o { \l_@@_odd_right_tl } }
+      }
+      { \exp_not:o { \l_@@_float_extra_tl } }
+      { \@@_float_placement:n {#1} }
+  }
+\cs_new:Npn \@@_float_placement:n #1
+  {
+    \tl_if_empty:NTF \l_@@_float_placement_tl
+      { \str_if_eq:nnTF {#1} { head } { tp } { bp } }
+      { \l_@@_float_placement_tl }
+  }
+\cs_new_protected:Npn \@@_add_float_line:nnnn
+  {
+    \bool_if:NTF \l_@@_next_float_bool
+      { \@@_next_float_line:nnnn }
+      { \@@_add_float_line_aux:nnnn }
+  }
+\cs_new_protected:Npn \@@_add_float_line_aux:nnnn #1#2#3#4
+  { \@@_add_style:n { \ttlitf@setfloat {#1} #2 {#3} [#4] } }
+\cs_new_protected:Npn \@@_next_float_line:nnnn #1#2#3#4
+  {
+    \bool_set_false:N \l_@@_next_float_bool
+    \ttlitf@nextfloat {#1} #2 {#3} [#4]
+  }
+\cs_new_protected:Npn \ttlitf@setfloat #1
+  {
+    \tl_clear:N \ttl@c
+    \use:c { \ttl@setft #1 @i }
+  }
+\cs_new_protected:Npn \ttlitf@nextfloat #1
+  {
+    \ttl@nextfree
+    \use:c { \ttl@setft #1 @i }
+  }
+\bool_new:N \l_@@_next_float_bool
+\hook_gput_code:nnn { package / titleps / after } { titleitf }
+  {
+    \cs_if_exist:NF \ttl@setfthead@i
+      { \cs_set_eq:NN \@@_add_float_line:nn \use_none:nn }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_add_float_unknown:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_add_float_unknown:nn #1#2
+  {
+    \tl_set:Nn \l_@@_head_foot_tl {#2}
+    \keys_set:nn { ttlitf / float } {#1}
+  }
+\tl_new:N \l_@@_head_foot_tl
 %    \end{macrocode}
 % \end{macro}
 %
